--- a/src/Components/Resume.css
+++ b/src/Components/Resume.css
@@ -222,6 +222,12 @@
     font-size: 1.2rem;
 }
 
+@media screen and (max-width: 768px){
+    .resume-container{
+        grid-template-columns: 1fr;
+        gap: 3rem;
+    }
+}
 
 
 
